assets/css/style.css
/*---------------------------------------------FONT AWESOME */

@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,500;1,700&display=swap');

body {
    font-family: 'Oswald', sans-serif;
}

/*---------------------------------------------UTILITIES */

/*---------------------------------------------NAVBAR */

.logo-brand {
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    font-size: 30px;
    font-style: italic;
    color: #1a1a1a;
}

.logo-brand:hover {
    color: #1a1a1a;
}

.nav-link-nav {
    font-weight: 300;
    font-style: italic;
    font-size: 18px;
    color: #1a1a1a;
    margin-left: 5px;
}

.nav-link-nav:hover {
    color: #1a1a1a;
}

.navbar-toggler i {
    font-size: 33px;
}

/*---------------------------------------------HERO */

.hero {
    height: 100vh;
    background: url(../images/sport-image.jpg) bottom center fixed;
    background-size: cover;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

.hero-text h1 {
    color: #fafafa;
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    font-style: italic;
    font-size: 45px;
}

.hero-text p {
    color: rgb(209, 186, 186);
    margin-top: 20px;
    letter-spacing: 1px;
    font-size: 18px;
}

.btn-orange {
    background: rgba(255, 72, 0, 0.89);
    width: 20%;
    border-radius: 15px;
    color: #fafafa;
    font-size: 20px;
    letter-spacing: 1px;
    font-weight: 700;
    text-transform: uppercase;
    margin-top: 50px;
}

.btn-orange:hover {
    color: #fafafa;
}

/*---------------------------------------------MOTIVATION */

.motivation {
    text-align: center;
    height: 50vh;
    display: flex;
    align-items: center;
    margin-top: 50px;
}

.motivation h2 {
    font-family: 'Roboto', sans-serif;
    font-style: italic;
    font-weight: 700;
    font-size: 35px;
    letter-spacing: 1px;
}

.motivation p {
    font-style: italic;
}

.embed-responsive {
    width: 40%;
    margin: auto;
}

/*---------------------------------------------Exercise */

.exercise {
    background: rgb(196, 71, 71);
}
.exercise-bg {
    background: url(../images/exercise.jpg);
    background-size: cover;
    background-position: center;
    height: 100vh;
    text-align: center;
}

.exercise-bg {
    color: #fafafa;
}

.exercise-bg h2 {
    margin-top: 50%;
}

.exercise-text {
    color: #fafafafa;
    font-style: italic;
    margin-top: 10px;
}

.exercise-text h4 {
    font-weight: 700;
    text-decoration: underline;
    letter-spacing: 1px;
}

/*---------------------------------------------Opinion */

.opinion-header {
    text-align: center;
    font-size: 35px;
    font-weight: 700;
    font-style: italic;
}

.opinion p {
    text-align: center;
}

.opinion-sub-header {
    text-align: center;
    font-size: 25px;
    font-weight: 400;
    font-style: italic;
}

.opinion-bg {
    background: black;
    color: #fafaff;
}

/*---------------------------------------------Products */

.products {
    height: 100vh;
    background: rgb(83, 72, 72);
}

.products-header a {
    text-decoration: none;
}

.products-header h2 {
    font-size: 33px;
    font-weight: 700;
    text-align: center;
    margin-top: 40px;
    margin-bottom: 30px;
    color: #fafafa;

}

.text-products a {
    text-decoration: none;
}
.text-products h5 {
    margin: auto;
    text-align: center;
}

.text-products h5 {
    margin-top: 10%;
    margin-bottom: 10%;
    font-weight: 700;
    font-style: italic;
    background: rgba(238, 66, 3, 0.966);
    color: #fafafa;
}

.product-image {
    height: 75vh;
    background: url(../images/product-image.jpg);
    background-size: cover;
}

/*---------------------------------------------Footer */

.footer-site {
    height: 15vh;;
}

.icon-footer {
    display: flex;
    align-content: center;
    justify-content: space-between;
    margin-top: 50px;
}

.icon-footer a i {
    font-size: 40px;
    color: black;
    font-weight: 700;
}

/*---------------------------------------------Table */

.table-sub-header {
    text-align: center;
    font-weight: 700;
    font-style: italic;
}

.table-sub-header h2 {
    font-size: 40px;
}
.btn-header {
    font-style: italic;
    font-weight: 700;
    color: black;;
    background: rgb(231, 78, 23);
}

.btn-header:hover {
    color: black;
}

